Header button jump on scroll fixed

--- a/src/sass/parts/header/_header.sass
+++ b/src/sass/parts/header/_header.sass
@@ -29,6 +29,7 @@ header.header
                 .button
                     padding-left: 8px
                     padding-right: 8px
+                    border: 1px solid transparent
                     &.language-btn
                         border: 1px solid $color-green !important
                         background: transparent !important
